--- a/page/content.pug
+++ b/page/content.pug
@@ -9,8 +9,16 @@ html
 
         script(type='text/javascript', src='/js/vendor/jquery/jquery.js')
         script(type='text/javascript', src='/js/vendor/lodash.min.js')
-        script(type='text/javascript', src='/js/local/kzbrg.js')
-        link(rel='stylesheet', href='/css/kzbrg.css')
+
+        script(type='text/javascript', src='/campaign/lunr.js')
+        // script(src='https://unpkg.com/lunr/lunr.js')
+
+        link(rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin="")
+        // Make sure you put this AFTER Leaflet's CSS
+        script(src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin="")
+
+        link(rel='stylesheet', href='/campaign/krgotrex.css')
+        script(type='text/javascript', src='/campaign/krgotrex.js')
 
         title Kreuzberg, Google presence analysis tool
 
@@ -37,6 +45,12 @@ html
             input(type="text" id="newsite" placeholder="suggest a new site...")
             input(type="text" id="whereis" placeholder="where is it?")
             button(id="suggest") suggest!
+
+        .container-fluid
+            div#summary
+
+        .container-fluid
+            div#mapid
 
         .container-fluid
             table
