removed static list

--- a/page/content.pug
+++ b/page/content.pug
@@ -52,6 +52,7 @@ html
         .container-fluid
             div#mapid
 
+
         .container-fluid
             table
                 thead
@@ -74,6 +75,42 @@ html
                                 if analyzed.nothing
                                     span.clean ✔  No Google detected!
 
+
+
+        .container-fluid
+            h3 Replacements
+            p Below there is a list of text snippets, they are a work in progress, to be later incorporated in the new UX
+            
+            .div#replacement
+                div#targetName Google Fonts
+                div#theproblem 
+                div#thesolution 
+
+            .div#replacement
+                div#targetName Google Plus
+                div#theproblem
+                div#thesolution 
+
+            .div#replacement
+                div#targetName Google Maps
+                div#theproblem
+                div#thesolution 
+                
+            .div#replacement
+                div#targetName YouTube
+                div#theproblem
+                div#thesolution 
+                
+            .div#replacement
+                div#targetName Google Analytics
+                div#theproblem
+                div#thesolution 
+                
+            .div#replacement
+                div#targetName Google ADS/DoubleClick
+                div#theproblem
+                div#thesolution 
+                
 
         .container-fluid
             h2 Then what?
