small note in h1

--- a/legacy/content.pug
+++ b/legacy/content.pug
@@ -42,9 +42,7 @@ html
             h2 Fuck off Google out of Kreuzberg, but can we get rid of Google from Kreuzberg websites?
 
         .container-fluid
-            input(type="text" id="newsite" placeholder="suggest a new site...")
-            input(type="text" id="whereis" placeholder="where is it?")
-            button(id="suggest") suggest!
+            h1 Hi! many changes in progress, nothing works now (Sunday 24, June, 2018)
 
         .container-fluid
             div#summary
