Expressify the app

--- a/page/styles/style.scss
+++ b/page/styles/style.scss
@@ -19,4 +19,4 @@
  +++  If you add new SCSS partials,
       import them here below !!! +++
  ************************************/
-@import "globals";
+@import "globals/globals";
