--- a/page/styles/style.scss
+++ b/page/styles/style.scss
@@ -2,7 +2,7 @@
  Using Foundation for Sites as responsive framework
  ***************************************************/
 @import "settings";
-@import "../../node_modules/foundation-sites/scss/foundation";
+@import "../node_modules/foundation-sites/scss/foundation";
 
 /* Get all Foundation mixins and helper classes */
 @include foundation-everything;
