--- a/page/styles/style.scss
+++ b/page/styles/style.scss
@@ -19,4 +19,9 @@
  +++  If you add new SCSS partials,
       import them here below !!! +++
  ************************************/
-@import "globals/globals";
+@import 
+  "globals",
+  "header",
+  "hero",
+  "footer"
+;
