--- a/page/views/index.pug
+++ b/page/views/index.pug
@@ -7,6 +7,7 @@ block content
     section#hero
       .row.align-center
         .small-12.column.text-center.hero-content
+          h1 #{title}
           p Google is almost everywhere.
             br
             | It knows our interests.
