--- a/page/styles/_hero.scss
+++ b/page/styles/_hero.scss
@@ -2,5 +2,5 @@
   background: url('assets/img/fancy-pants.jpg') repeat;
   height: calc(100vh - #{$headerHeight});
   padding-top: calc(#{$headerHeight} * 2);
-  padding-bottom: 32px;
+  padding-bottom: $global-padding * 2;
 }
