Turn site into SPA

--- a/page/styles/_footer.scss
+++ b/page/styles/_footer.scss
@@ -1,4 +1,7 @@
 footer {
+  background-color: $darkturquoise-color;
   padding-top: $global-padding / 2;
   padding-bottom: $global-padding / 2;
+  position: relative;
+  bottom: 0;
 }
