--- a/page/styles/style.scss
+++ b/page/styles/style.scss
@@ -22,6 +22,9 @@
 @import 
   "globals",
   "header",
-  "hero",
-  "footer"
+  "footer",
+  "lists/lists",
+  "forms/buttons",
+  "forms/form-check-site",
+  "content/hero"
 ;
