--- a/page/styles/_globals.scss
+++ b/page/styles/_globals.scss
@@ -1,7 +1,25 @@
 // Global styles that are NOT already defined in the _settings.scss file go here
 
-$headerHeight: 48px;
+body {
+  background-image: url('assets/img/lashes-dark.png');
+}
 
+section {
+  padding-top: $global-padding * 2;
+  padding-bottom: $global-padding * 2;
+}
+
+// Colors
+$lightturquoise-color: get-color(lightturquoise);
+$turquoise-color: get-color(turquoise);
+$mediumturquoise-color: get-color(mediumturquoise);
+$darkturquoise-color: get-color(darkturquoise);
+
+label {
+  color: $body-font-color;
+}
+
+// Behaviour
 a {
   transition: color .2s ease;
 }
