--- a/page/views/page.pug
+++ b/page/views/page.pug
@@ -4,22 +4,19 @@ html(lang='de')
     meta(charset='UTF-8')
     meta(http-equiv='X-UA-Compatible', content='ie=edge')
     meta(
-      name='viewport',
+      name='viewport'
       content='width=device-width, initial-scale=1')
     title=`${title}${siteName ? ' | '+siteName : ''}`
     link(rel='stylesheet', href='style.css')
   body
     block header
-      header#main-header
-        nav.row.align-center
-          .small-10.medium-8.large-6.column
-            h1#header-logo
-              a.header-logo__link(href="/") #{shortTitle}
-          .small-2.medium-4.large-6.column
-            a.header-link(href="/sites") Sites
-
+      include header
 
     block content
+      block hero
+        include hero
+      block map
+        include map
 
     block footer
       footer
