Display analyzed sites and respective results

--- a/page/styles/_globals.scss
+++ b/page/styles/_globals.scss
@@ -2,11 +2,7 @@
 
 body {
   background-image: url('assets/img/lashes-dark.png');
-}
-
-section {
-  padding-top: $global-padding * 2;
-  padding-bottom: $global-padding * 2;
+  background-attachment: fixed;
 }
 
 // Colors
