--- a/page/views/page.pug
+++ b/page/views/page.pug
@@ -22,4 +22,5 @@ html(lang='de')
       footer
         .row.align-right
           .column.text-right Spread the word
+    script(src='https://code.jquery.com/jquery-3.3.1.min.js')
     script(data-main='js/main', src='js/require.js')
