--- a/page/styles/content/_hero.scss
+++ b/page/styles/content/_hero.scss
@@ -5,6 +5,9 @@
 
 .hero-content {
   height: 100%;
+  padding-top: $global-padding * 2;
+  padding-bottom: $global-padding * 2;
+
 
   &__title {
     font-weight: $global-weight-bold;
