Colorize results a bit more

--- a/page/styles/content/_map.scss
+++ b/page/styles/content/_map.scss
@@ -68,6 +68,10 @@
         margin-left: 0;
         text-align: left;
 
+        .alert {
+          color: $alert-color;
+        }
+
         .success {
           color: $success-color;
           text-transform: uppercase;
