--- a/page/styles/_header.scss
+++ b/page/styles/_header.scss
@@ -26,6 +26,10 @@ header {
 
       &-link {
         text-transform: uppercase;
+        
+        &:not(.header-logo) {
+          letter-spacing: 2px;
+        }
       }
     }
   }
