--- a/page/styles/style.scss
+++ b/page/styles/style.scss
@@ -27,5 +27,7 @@
   "forms/buttons",
   "forms/form-check-site",
   "content/hero",
-  "content/map"
+  "content/map-sites",
+  "content/map",
+  "content/sites"
 ;
