--- a/page/views/hero.pug
+++ b/page/views/hero.pug
@@ -13,10 +13,10 @@ block hero
                 | Do you want to get rid of Google in Kreuzberg? 
                 em Sure! 
                 br
-                | But what about your website? 
+                span.success But what about your website? 
               .row.align-center.text-center
-                .small-12.medium-10.large-8.column
-                  p
+                .small-12.medium-11.large-10.column
+                  p.lead
                     | Google's trackers and algorithms 
                     em infiltrated 
                     | all the websites you have ever visited.
