--- a/page/styles/_settings.scss
+++ b/page/styles/_settings.scss
@@ -169,7 +169,7 @@ $code-color: $black;
 $code-font-family: $font-family-monospace;
 $code-font-weight: $global-weight-normal;
 $code-background: $light-gray;
-$code-border: 1px solid $medium-gray;
+$code-border: 1px solid $dark-gray;
 $code-padding: rem-calc(2 5 1);
 $anchor-color: $white;
 $anchor-color-hover: get-color(lightturquoise);
