--- a/page/views/page.pug
+++ b/page/views/page.pug
@@ -7,6 +7,11 @@ html(lang='de')
       name='viewport'
       content='width=device-width, initial-scale=1')
     title=`${title}${siteName ? ' | '+siteName : ''}`
+    link(
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"
+      integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
+      crossorigin="")
     link(rel='stylesheet', href='style.css')
   body
     block header
@@ -15,12 +20,16 @@ html(lang='de')
     block content
       block hero
         include hero
-      block map
-        include map
+      block map-sites
+        include map-sites
 
     block footer
       footer
         .row.align-right
           .column.text-right Spread the word
     script(src='https://code.jquery.com/jquery-3.3.1.min.js')
+    script(
+      src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
+      integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
+      crossorigin="")
     script(data-main='js/main', src='js/require.js')
