--- a/page/views/sites.pug
+++ b/page/views/sites.pug
@@ -1,8 +1,8 @@
 block sites
-  #sites
+  aside#sites
     .row.site-titles
       .small-6.column.text-right
-        h6 Website tested
+        h6 Websites tested
       .small-6.column
         h6 Google traces found
     ul.row.align-middle.site-results-list
