--- a/page/styles/content/_map.scss
+++ b/page/styles/content/_map.scss
@@ -1,3 +1,12 @@
 #map {
-  
+  height: 100%;
+  width: 100%;
+
+  @include breakpoint(large) {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+  }
 }
