--- a/page/views/header.pug
+++ b/page/views/header.pug
@@ -4,4 +4,4 @@ header#main-header
       a.header-logo.header-link(href="/")
         abbr(title=title) #{shortTitle}
     .small-12.medium-4.large-6.column.text-right
-      a.header-link(href="#map-sites") Sites
+      a.header-link(href="#map-sites") Map
