--- a/page/views/page.pug
+++ b/page/views/page.pug
@@ -7,12 +7,23 @@ html(lang='de')
       name='viewport'
       content='width=device-width, initial-scale=1')
     title=`${title}${siteName ? ' | '+siteName : ''}`
+    // Stylesheets
     link(
-      rel="stylesheet"
-      href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"
-      integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
-      crossorigin="")
+      rel='stylesheet'
+      href='https://unpkg.com/leaflet@1.3.1/dist/leaflet.css'
+      integrity='sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=='
+      crossorigin='')
+    link(
+      href='https://api.mapbox.com/mapbox-gl-js/v0.46.0/mapbox-gl.css'
+      rel='stylesheet')
     link(rel='stylesheet', href='style.css')
+
+    // Scripts
+    script(
+      src='https://unpkg.com/leaflet@1.3.1/dist/leaflet.js'
+      integrity='sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=='
+      crossorigin='')
+    script(src='https://api.mapbox.com/mapbox-gl-js/v0.46.0/mapbox-gl.js')
   body
     block header
       include header
@@ -27,9 +38,7 @@ html(lang='de')
       footer
         .row.align-right
           .column.text-right Spread the word
+
+    // Scripts
     script(src='https://code.jquery.com/jquery-3.3.1.min.js')
-    script(
-      src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
-      integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
-      crossorigin="")
     script(data-main='js/main', src='js/require.js')
