--- a/page/styles/content/_sites.scss
+++ b/page/styles/content/_sites.scss
@@ -1,5 +1,6 @@
 #sites {
   background-color: $mediumturquoise-color;
+  overflow: hidden;
 
   @include breakpoint(large) {
     position: absolute;
@@ -39,6 +40,12 @@
         padding-top: $global-padding / 2;
         padding-bottom: $global-padding / 2;
 
+        @media 
+          (max-width: 380px),
+          (min-width: 1024px) and (max-width: 1188px) {
+          hyphens: auto;
+        }
+
         &:not(:last-child) {
           border-bottom: $code-border;
         }
@@ -46,6 +53,8 @@
     }
 
     &-details {
+      color: $medium-gray;
+
       strong {
         font-style: normal;
         line-height: 1;
@@ -60,6 +69,16 @@
     &-googles {
       margin-left: 0;
       text-align: left;
+
+      .alert {
+        line-height: 1.3;
+        padding-top: 4px;
+        padding-bottom: 6px;
+
+        &:not(:last-child) {
+          border-bottom: 1px dotted $darkturquoise-color;
+        }
+      }
 
       .success {
         text-transform: uppercase;
