UX-Improvement: Disable map movements on touchscroll

--- a/page/views/map.pug
+++ b/page/views/map.pug
@@ -42,6 +42,7 @@ block map
     });
     // Add zoom and rotation controls to the map.
     map.addControl(new mapboxgl.NavigationControl(), 'top-left');
+    map.dragPan.disable();
 
     // add markers to map
     geojson.sites.forEach((marker) => {
