--- a/page/views/mixins/_siteCheckForm.pug
+++ b/page/views/mixins/_siteCheckForm.pug
@@ -19,5 +19,5 @@ mixin siteCheckForm(site = {})
           button(
             type="submit"
             id="hero-cta"
-            class="button success"
+            class="button"
           ) Check website
