--- a/page/views/hero.pug
+++ b/page/views/hero.pug
@@ -9,11 +9,7 @@ block hero
             h1.text-center.hero-content__title #{title}
           .small-10.medium-8.large-6.column.text-center
             .hero-content__text
-              h2
-                | Do you want to get rid of Google in Kreuzberg? 
-                em Sure! 
-                br
-                span.success But what about your website? 
+              h2 #{i18n.__("hero['lead']")}
               .row.align-center.text-center
                 .small-12.medium-11.large-10.column
                   p.lead
