--- a/page/views/header.pug
+++ b/page/views/header.pug
@@ -5,3 +5,5 @@ header#main-header
         abbr(title=title) #{shortTitle}
     .small-12.medium-4.large-6.column.text-right
       a.header-link(href="#map-sites") #{i18n.__("headerLinksMap")}
+      a.header-link(href="/de") Deutsch
+      a.header-link(href="/en") English
