--- a/page/views/hero.pug
+++ b/page/views/hero.pug
@@ -9,14 +9,9 @@ block hero
             h1.text-center.hero-content__title #{title}
           .small-10.medium-8.large-6.column.text-center
             .hero-content__text
-              h2 #{i18n.__("hero['lead']")}
+              h2 !{i18n.__("heroLeadParagraph")}
               .row.align-center.text-center
                 .small-12.medium-11.large-10.column
-                  p.lead
-                    | Google's trackers and algorithms 
-                    em infiltrated 
-                    | all the websites you have ever visited.
-                    br 
-                    | So maybe you should get rid of them as well.
+                  p.lead !{i18n.__("heroSubParagraph")}
           .small-12.medium-10.large-8.column.text-center
             +siteCheckForm()
