Fully i18n the appf

--- a/page/views/page.pug
+++ b/page/views/page.pug
@@ -26,10 +26,7 @@ html(lang='de')
         include map-sites
 
     block footer
-      footer
-        .row.align-right
-          .column.text-right Spread the word
-
+      include footer
     // Scripts
     script(src='https://code.jquery.com/jquery-3.3.1.min.js')
     script(data-main='js/main', src='js/require.js')
