--- a/page/styles/_header.scss
+++ b/page/styles/_header.scss
@@ -25,15 +25,22 @@ header {
       }
 
       &-link {
-        text-transform: uppercase;
         padding-left: $global-padding / 2;
+
+        &:nth-child(2) {
+          padding-left: $global-padding;
+        }
 
         &:not(:last-child) {
           padding-right: $global-padding / 2;
         }
 
-        &:not(.header-logo) {
+        &.priority {
+          border-right: $code-border;
+          border-right-color: currentColor;
           letter-spacing: 2px;
+          text-transform: uppercase;
+          padding-right: $global-padding;
         }
       }
     }
