--- a/page/views/header.pug
+++ b/page/views/header.pug
@@ -4,6 +4,6 @@ header#main-header
       a.header-logo.header-link(href="/")
         abbr(title=title) #{shortTitle}
     .small-12.medium-4.large-6.column.text-right
-      a.header-link(href="#map-sites") #{i18n.__("headerLinksMap")}
+      a.header-link.priority(href="#map-sites") #{i18n.__("headerLinksMap")}
       a.header-link(href="/de") Deutsch
       a.header-link(href="/en") English
