--- a/page/styles/content/_map.scss
+++ b/page/styles/content/_map.scss
@@ -34,7 +34,7 @@
     }
 
     .mapboxgl-popup-close-button {
-      padding: 4px;
+      padding: 2px 5px;
 
       &:hover {
         background-color: $lightturquoise-color;
