--- a/page/views/header.pug
+++ b/page/views/header.pug
@@ -4,7 +4,8 @@ header#main-header
       a.header-logo.header-link(
         href="/",
         title=title) #{shortTitle}
-    .small-12.medium-4.large-6.column.text-right
-      a.header-link.priority(href="#map-sites") #{i18n.__("headerLinksMap")}
-      a#header-link-de.header-link.header-link-lang(href="/de") Deutsch
-      a#header-link-en.header-link.header-link-lang(href="/en") English
+    .small-12.medium-4.large-6.column
+      .row.header-menu
+        a.large-3.column.small-order-3.medium-order-1.header-link.priority(href="#map-sites") #{i18n.__("headerLinksMap")}
+        a#header-link-de.small-2.medium-3.large-1.column.small-order-1.medium-order-2.header-link.header-link-lang(href="/de") De
+        a#header-link-en.small-2.medium-3.large-1.column.small-order-1.medium-order-3.header-link.header-link-lang(href="/en") En
