Minor layout improvement

--- a/page/styles/content/_sites.scss
+++ b/page/styles/content/_sites.scss
@@ -21,6 +21,7 @@
       h6 {
         font-weight: $global-weight-bold;
         text-transform: uppercase;
+        margin-bottom: 0;
       }
     }
 
