--- a/page/views/sites.pug
+++ b/page/views/sites.pug
@@ -1,6 +1,6 @@
 block sites
   aside#sites
-    .row.site-titles
+    .row.align-middle.site-titles
       .small-6.column.text-right
         h6 #{i18n.__("sitesListSitenameTitle")}
       .small-6.column
