--- a/page/views/page.pug
+++ b/page/views/page.pug
@@ -22,8 +22,12 @@ html(lang='de')
     block content
       block hero
         include hero
+        small Your city, region, area, can have the same map: 
+          a(href="https://github.com/tracking-exposed/krgotrex") fork us!
       block map-sites
         include map-sites
+
+    include checkYourSite
 
     block footer
       include footer
