Fix paths for styles and javascript imports

--- a/site/views/webapp.pug
+++ b/site/views/webapp.pug
@@ -11,7 +11,7 @@ html(lang='de')
     link(
       href='https://api.mapbox.com/mapbox-gl-js/v0.46.0/mapbox-gl.css'
       rel='stylesheet')
-    link(rel='stylesheet', href='style.css')
+    link(rel='stylesheet', href='/assets/style.css')
 
     // Scripts
     script(src='https://api.mapbox.com/mapbox-gl-js/v0.46.0/mapbox-gl.js')
@@ -26,4 +26,4 @@ html(lang='de')
     include footer
     // Scripts
     script(src='https://code.jquery.com/jquery-3.3.1.min.js')
-    script(data-main='js/main', src='js/require.js')
+    script(data-main='/js/main', src='/js/require.js')
