--- a/site/views/webapp.pug
+++ b/site/views/webapp.pug
@@ -17,11 +17,12 @@ html(lang='de')
     script(src='https://api.mapbox.com/mapbox-gl-js/v0.46.0/mapbox-gl.js')
   body
     include header
+    include tabs
 
-    //- include map-sites
-    //- include checkYourSite
-    //- include propaganda
-    //- include replacements
+    include map-sites
+    include checkYourSite
+    include propaganda
+    include replacements
 
     include footer
     // Scripts
