toggle() and new tabs

--- a/site/views/checkYourSite.pug
+++ b/site/views/checkYourSite.pug
@@ -1,4 +1,6 @@
 include mixins/_siteCheckForm
-.small-12.medium-12.large-12.column.text-center
-  +siteCheckForm()
+section.component#component-check
+  .row
+    .small-12.medium-12.large-12.column.text-center
+      +siteCheckForm()
 
