--- a/site/views/replacements.pug
+++ b/site/views/replacements.pug
@@ -1,21 +1,5 @@
-block hero
-  section#hero
-    .align-center.align-middle.hero-content
-      .small-12.column
-        .align-center
-          .small-12.column
-            h1.text-left.hero-content__title Google spies on everyone
-            h1.text-right.hero-content__title Do they infiltrate your website?
-            // #{title}
-          .small-12.medium-12.large-12.column.text-right
-            // hero-content__text
-            .div.text-left
-              h3 Google use their numerous technologies to collect and aggregate data about everyone. These data are used to profile people to influence them (through modifying content) or sold to third-parties. "We" think everyone should worry about the social, economic and political consequences of this surveillance capitalism.
-            .div.text-right
-              h3 Many people contribute to surveillance, without even realizing, by enabling to Google collect data. People disclose data about themselves (for instance when directly using Google technology, or hardware or software embedding them), but also data about others (for instance the visitors of their website). Many websites contain Google technologies, sometimes even without their owners being aware of it, or because they think they provide useful "free" services (maps, analytics, fonts, etc.). In reality, all these infiltrated technologies enable Google to spy on the visitors of such websites.
-            .div.text-left
-              h3 People of Kreuzberg (Berlin) are organizing against Google and its project for a "campus" in their neighborhood. As one of many ways to resist against Google, they provide this tool enabling everyone to check, visualize and understand if their website is infiltrated by spying technologies from Google.
-              // !{i18n.__("heroLeadParagraph")}
-              //.row.align-center.text-center
-              //  .small-12.medium-11.large-10.column
-              //    p.lead !{i18n.__("heroSubParagraph")}
+section.component#component-replacement
+  .row.align-center.align-middle
+    .small-12.column
+      foo foo
+      h2 use pmwik
