--- a/site/views/tabs.pug
+++ b/site/views/tabs.pug
@@ -1,5 +1,9 @@
 .row
-  .column propaganda
-  .column map
-  .column check your site
-  .column replacements
+  .column 
+     a(data-route="about" href="about") about
+  .column 
+     a(data-route="map" href="map") map
+  .column 
+     a(data-route="check" href="check") check your site
+  .column 
+     a(data-route="replacement" href="replacements") replacements
