--- a/site/views/webapp.pug
+++ b/site/views/webapp.pug
@@ -21,7 +21,7 @@ html(lang='de')
 
     include map-sites
     include checkYourSite
-    include propaganda
+    include about 
     include replacements
 
     include footer
