--- a/site/views/webapp.pug
+++ b/site/views/webapp.pug
@@ -19,10 +19,12 @@ html(lang='de')
     include header
     include tabs
 
-    include map-sites
-    include checkYourSite
-    include about 
-    include replacements
+    main
+      #loader Loading...
+      include map-sites
+      include checkYourSite
+      include about 
+      include replacements
 
     include footer
     // Scripts
