Improve loading and remove unused package

--- a/site/views/webapp.pug
+++ b/site/views/webapp.pug
@@ -6,7 +6,7 @@ html(lang='de')
     meta(
       name='viewport'
       content='width=device-width, initial-scale=1')
-    title=`${title}${siteName ? ' | '+siteName : ''}`
+    title=`KrGoTrEx`
     // Stylesheets
     link(
       href='https://api.mapbox.com/mapbox-gl-js/v0.46.0/mapbox-gl.css'
