--- a/site/views/header.pug
+++ b/site/views/header.pug
@@ -3,9 +3,8 @@ header#main-header
     .small-12.medium-8.large-6.column
       a.header-logo.header-link(
         href="/",
-        title=title) #{shortTitle}
+        title='Kreuzberg Google Tracking Exposed') KrGoTrEx
     .small-12.medium-4.large-6.column
       .row.header-menu
-        a.large-3.column.small-order-3.medium-order-1.header-link.priority(href="#map-sites") #{i18n.__("headerLinksMap")}
         a#header-link-de.small-2.medium-3.large-1.column.small-order-1.medium-order-2.header-link.header-link-lang(href="/de") De
         a#header-link-en.small-2.medium-3.large-1.column.small-order-1.medium-order-3.header-link.header-link-lang(href="/en") En
